# Bmw-Remote-ENET

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: windows-installer.yml
colab/: README.md  build_notebook.py  qwen36_27b_finetune_colab.ipynb  validate_notebook.py
config/: agent.toml  gateway.toml
crates/enet-agent/: Cargo.toml
crates/enet-agent/src/: main.rs  status.html
crates/enet-core/: Cargo.toml  build.rs
crates/enet-core/src/: config.rs  discovery.rs  health.rs  lan_discovery.rs  lib.rs  logging.rs  npcap.rs  safety.rs  state.rs  stats.rs  updater.rs
crates/enet-gateway/: Cargo.toml
crates/enet-gateway/src/: dashboard.html  main.rs
crates/enet-gui/: Cargo.toml
crates/enet-gui/src/: main.rs
crates/enet-installer/: Cargo.toml  build.rs
crates/enet-installer/embedded/: README.md
crates/enet-installer/src/: download.rs  install.rs  main.rs
crates/enet-protocol/: Cargo.toml
crates/enet-protocol/src/: crypto.rs  frame.rs  lib.rs  magic.rs
crates/enet-relay/: Cargo.toml
crates/enet-relay/src/: main.rs
crates/enet-setup/: Cargo.toml
crates/enet-setup/src/: main.rs
crates/enet-sim/: Cargo.toml
crates/enet-sim/src/: main.rs
crates/enet-tunnel/: Cargo.toml
crates/enet-tunnel/src/: engine.rs  ethernet.rs  lib.rs  pcap_ethernet.rs  peer.rs  relay_client.rs  relay_engine.rs
crates/enet-tunnel/tests/: integration.rs
docs/: ARCHITECTURE.md  BMW_ENET.md  DEVELOPERS.md  HOW_TO_USE.md  INSTALL.md  NETWORK.md  PERFORMANCE.md  QUICKSTART.md  REMOTE.md  ROADMAP.md  SETUP_WIZARD.md  USER_MANUAL.md  WINDOWS_DRIVERS.md
installer/: Build-Windows.ps1  Install-Desktop.bat  Install-Laptop.bat  Setup-Agent.ps1  Setup-Gateway.ps1  install-agent.bat  install-gateway.bat  uninstall.bat
installer/legacy/: Install-Desktop.bat  Install-Laptop.bat  Setup-Agent.ps1  Setup-Gateway.ps1
scripts/: build.md
