[package]
name = "enet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared BMW ENET gateway core: config, discovery, stats, safety"

[dependencies]
enet-protocol = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
sysinfo = { workspace = true }
hostname = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
if-addrs = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
