[package]
name = "enet-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Desktop BMW ENET gateway service"

[[bin]]
name = "enet-gateway"
path = "src/main.rs"

[dependencies]
enet-protocol = { workspace = true }
enet-core = { workspace = true }
enet-tunnel = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
