[package]
name = "enet-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BMW ENET gateway wire protocol: L2 Ethernet-over-UDP framing"

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
