[package]
name = "enet-tunnel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async L2 Ethernet-over-UDP tunnel engine"

[dependencies]
enet-protocol = { workspace = true }
enet-core = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
socket2 = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
hostname = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
